Added 2x click button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
         <div id="shop-items"></div>
     </div>
 
+</div>
+
+<div class="upgrade-corner">
+        <button id="btn-double" class="fancy-upgrade-btn">
+            Купить х2 Клик (5000$)
+        </button>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
