Feat: Added click multiplier, new GPUs and fixed button UI

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <div class="game-container">
+        
+        <div id="news-banner" class="news-hidden">
+            📉 Рынок обвалился! Доход упал...
+        </div>
+
         <div class="main-selection">
             <h1>Crypto Tycoon</h1>
             
