--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="game-container">
-        
+
         <div id="news-banner" class="news-hidden">
             📉 Рынок обвалился! Доход упал...
         </div>
@@ -39,6 +39,10 @@
             Купить х2 Клик (5000$)
         </button>
     </div>
+
+    <audio id="sfx-click" src="sounds/click.mp3"></audio>
+    <audio id="sfx-buy" src="sounds/buy.mp3"></audio>
+    <audio id="sfx-alert" scr="sounds/alert.mp3"></audio>
 
     <script src="script.js"></script>
 </body>
